--- a/.github/workflows/context-pack.yml
+++ b/.github/workflows/context-pack.yml
@@ -22,8 +22,18 @@ jobs:
         run: |
           python -m pip install --upgrade pip
 
+      - name: Force UTF-8 on Windows
+        if: runner.os == 'Windows'
+        shell: pwsh
+        run: |
+          chcp 65001
+          $env:PYTHONIOENCODING="utf-8"
+
       - name: Build context pack
+        env:
+          PYTHONIOENCODING: "utf-8"
         run: python scripts/context_pack.py
+
 
       - name: List build outputs (debug)
         run: |
